fixed layout issues - changed flexbox to grid

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
+/*@import 'tailwindcss';*/
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import 'tailwindcss';
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -23,6 +24,9 @@ html, body {
   height: 100%;
 }
 
+*{
+  box-sizing: border-box;
+}
 
 
 /*a {*/
@@ -91,7 +95,7 @@ h1 {
     --accent-foreground: 0 0% 9%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
+    /*--border: 0 0% 89.8%;*/
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
     --chart-1: 12 76% 61%;
@@ -100,6 +104,7 @@ h1 {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
+    --margin: 1rem;
   }
   .dark {
     --background: 0 0% 3.9%;
@@ -118,7 +123,7 @@ h1 {
     --accent-foreground: 0 0% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
+    /*--border: 0 0% 14.9%;*/
     --input: 0 0% 14.9%;
     --ring: 0 0% 83.1%;
     --chart-1: 220 70% 50%;
@@ -128,7 +133,6 @@ h1 {
     --chart-5: 340 75% 55%;
   }
 }
-
 
 
 @layer base {
